events layout changes;

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -13,5 +13,8 @@
         <p>
             Organisator: {{ model.organisator }}
         </p>
+        <p>
+            Preis: {{ model.price }}
+        </p>
     </mat-card-content>
 </mat-card>
