--- a/src/app/containers/events/events.component.html
+++ b/src/app/containers/events/events.component.html
@@ -1,1 +1,3 @@
-<pila-event *ngFor="let event of events" [model]="event"> </pila-event>
+<div class="container">
+    <pila-event *ngFor="let event of events" [model]="event"> </pila-event>
+</div>
